[gd_scene load_steps=18 format=2]

[ext_resource path="res://graficos/extras/jogador_1_auxilio.png" type="Texture" id=1]
[ext_resource path="res://graficos/extras/jogador_3_auxilio.png" type="Texture" id=2]
[ext_resource path="res://graficos/extras/jogador_4_auxilio.png" type="Texture" id=3]
[ext_resource path="res://graficos/extras/jogador_2_auxilio.png" type="Texture" id=4]
[ext_resource path="res://scripts/estagios/estagio1/GUI.gd" type="Script" id=5]
[ext_resource path="res://graficos/extras/marcadores/quadrado100px.png" type="Texture" id=6]
[ext_resource path="res://graficos/extras/marcadores/marcador_verde.png" type="Texture" id=7]
[ext_resource path="res://graficos/extras/marcadores/marcador_rosa.png" type="Texture" id=8]
[ext_resource path="res://graficos/extras/marcadores/marcador_laranja.png" type="Texture" id=9]
[ext_resource path="res://graficos/extras/marcadores/marcador_preto.png" type="Texture" id=10]
[ext_resource path="res://recursos/fonts/white_bread/White Bread.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://recursos/fonts/hey_comic/Hey Comic.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://graficos/extras/audio-speaker-off-svgrepo-com.svg" type="Texture" id=13]
[ext_resource path="res://graficos/extras/audio-speaker-on-svgrepo-com.svg" type="Texture" id=14]

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 11 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNotas1" type="TextureRect" parent="Control/Player1"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 4.0
margin_top = 4.0
margin_right = 104.0
margin_bottom = 104.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMarcador1" type="TextureRect" parent="Control/Player1"]
margin_left = 4.0
margin_top = 4.0
margin_right = 104.0
margin_bottom = 104.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marcador" type="TextureRect" parent="Control/Player1/PlayerMarcador1"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="HBoxContainer" parent="Control/Player1"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 110.0
margin_top = 16.0
margin_right = 121.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Player1/Audio"]
margin_right = 7.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "1"

[node name="Imagem" type="Control" parent="Control/Player1/Audio"]
margin_left = 11.0
margin_right = 11.0
margin_bottom = 27.0

[node name="On" type="TextureRect" parent="Control/Player1/Audio/Imagem"]
visible = false
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Off" type="TextureRect" parent="Control/Player1/Audio/Imagem"]
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNotas2" type="TextureRect" parent="Control/Player2"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_top = 4.0
margin_bottom = 100.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMarcador2" type="TextureRect" parent="Control/Player2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 104.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marcador" type="TextureRect" parent="Control/Player2/PlayerMarcador2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="HBoxContainer" parent="Control/Player2"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -147.0
margin_top = 15.0
margin_right = -133.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Player2/Audio"]
margin_right = 10.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "2"

[node name="Imagem" type="Control" parent="Control/Player2/Audio"]
margin_left = 14.0
margin_right = 14.0
margin_bottom = 27.0

[node name="On" type="TextureRect" parent="Control/Player2/Audio/Imagem"]
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Off" type="TextureRect" parent="Control/Player2/Audio/Imagem"]
visible = false
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player3" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNotas3" type="TextureRect" parent="Control/Player3"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -104.0
margin_right = 104.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMarcador3" type="TextureRect" parent="Control/Player3"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -104.0
margin_right = 104.0
margin_bottom = -4.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marcador" type="TextureRect" parent="Control/Player3/PlayerMarcador3"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )

[node name="Audio" type="HBoxContainer" parent="Control/Player3"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 111.0
margin_top = -91.0
margin_right = 122.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Player3/Audio"]
margin_right = 9.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "3"

[node name="Imagem" type="Control" parent="Control/Player3/Audio"]
margin_left = 13.0
margin_right = 13.0
margin_bottom = 27.0

[node name="On" type="TextureRect" parent="Control/Player3/Audio/Imagem"]
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Off" type="TextureRect" parent="Control/Player3/Audio/Imagem"]
visible = false
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player4" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNotas4" type="TextureRect" parent="Control/Player4"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -104.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMarcador4" type="TextureRect" parent="Control/Player4"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -104.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marcador" type="TextureRect" parent="Control/Player4/PlayerMarcador4"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )

[node name="Audio" type="HBoxContainer" parent="Control/Player4"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -146.0
margin_top = -90.0
margin_right = -131.0
margin_bottom = -63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Player4/Audio"]
margin_right = 11.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "4"

[node name="Imagem" type="Control" parent="Control/Player4/Audio"]
margin_left = 15.0
margin_right = 15.0
margin_bottom = 27.0

[node name="On" type="TextureRect" parent="Control/Player4/Audio/Imagem"]
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Off" type="TextureRect" parent="Control/Player4/Audio/Imagem"]
visible = false
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="Control"]
anchor_left = 0.6
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.2
margin_left = -83.4
margin_top = -2.0
margin_right = 314.2
margin_bottom = 173.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SePrepare" type="Label" parent="Control/Info"]
margin_right = 500.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 0.470588 )
custom_fonts/font = SubResource( 1 )
text = "Se Prepare..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="Control/Info"]
modulate = Color( 1, 1, 1, 0.470588 )
margin_top = 46.0
margin_right = 500.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 2 )
text = "20
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
